--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
         </div>
     </div>
     <script src="app.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/gh/mathusummut/confetti.js/confetti.min.js"></script>
 </body>
 
 </html>
